crates/keron-lang/tests/corpus/errors/check/if_branch_mismatch.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `if` branches have mismatched types: `then` is `Int`, `else` is `String`
  --> 3:8
  |
3 | } else {
  |        ^^^^^^^^^^^^
